--- a/agenda/style.css
+++ b/agenda/style.css
@@ -22,20 +22,53 @@ body{
     width: 100%;
     height: 100vh;
     position: relative;
+    z-index: 0;
 }
 
-.header h1 {
+.logo h1 {
     text-transform: uppercase;
     color: #181818;
     font-size: 6.5rem;
     font-weight: 700;
     letter-spacing: -1px;
     position: absolute;
-    top: 2%;
-    left: 10%;
-z-index: 10;
+    top: 4rem;
+    left: 14rem;
+    z-index: 10;
 }
 
+.logo h1 .test a:link,
+.logo h1 .test a:visited,
+.logo h1 .test a:active {
+    text-decoration: underline;
+    color: #181818;
+}
+
+.navigation {
+    list-style: none;
+    position: absolute;
+    top: 2rem;
+    right: 7rem;
+    margin-top: 3rem;
+    z-index: 12;
+}
+
+.navigation li {
+    margin-left: 3rem;
+    display: inline-block;
+  
+}
+
+
+.navigation li a {
+    text-decoration: none;
+    color: #000;
+    font-size: 1.6rem;
+    letter-spacing: 2px;
+    font-weight: 600;
+    text-transform: uppercase;
+   
+}
 
 .text-box {
     color: #fff;
@@ -127,4 +160,25 @@ z-index: 10;
     padding: 0 5rem;
     
 }
+
+.footer {
+    width: 100%;
+    height: 20rem;
+    padding-top: 8rem;
+}
+
+.logo-footer {
+    text-transform: uppercase;
+    font-size: 2rem;
+    float: left;
+  
+}
+
+.motto {
+    font-size: 1.5rem;
+    float: right;
+   
+}
+
+
 
